--- a/src/app/login/lost-password/lost-password.component.html
+++ b/src/app/login/lost-password/lost-password.component.html
@@ -1,21 +1,21 @@
-<div class="lost-password-container mat-typography" fxLayout="row" fxLayoutAlign="center">
+<div class="renew-password-container mat-typography" fxLayout="row" fxLayoutAlign="center">
     <mat-card fxFlex="90%" fxFlex.sm="66%" fxFlex.md="50%" fxFlex.gt-md="33%" class="lost-password-box">
-        <form (ngSubmit)="renewPassword()" [formGroup]="lostPasswordForm" novalidate>
-            <div class="lost-password-error" [hidden]="!error || isLoading">
-                Username incorrect
+        <form (ngSubmit)="renewPassword()" [formGroup]="renewPasswordForm" novalidate>
+            <div class="renew-password-error" [hidden]="!error || isLoading">
+                No user exists with that email.
             </div>
             <br />
             <div fxLayout="column">
                 <mat-form-field>
-                    <input type="text" matInput formControlName="username" autocomplete="username"
-                        placeholder="Username" required />
-                    <mat-error *ngIf="lostPasswordForm.get('username').hasError('required')">
-                        <span>Username is required</span>
+                    <input type="text" matInput formControlName="email" autocomplete="username" placeholder="Email"
+                        required />
+                    <mat-error *ngIf="renewPasswordForm.get('email').hasError('required')">
+                        <span>Email is required</span>
                     </mat-error>
                 </mat-form-field>
                 <br />
                 <button mat-raised-button color="primary" type="submit"
-                    [disabled]="lostPasswordForm.invalid || isLoading">
+                    [disabled]="renewPasswordForm.invalid || isLoading">
                     <app-loader class="inline-loader" [isLoading]="isLoading"></app-loader>
                     <span>Submit</span>
                 </button>
