--- a/src/app/login/lost-password/lost-password.component.scss
+++ b/src/app/login/lost-password/lost-password.component.scss
@@ -10,15 +10,15 @@
     display: inline-block;
 }
 
-.lost-password-container,
+.renew-password-container,
 .mat-form-field {
     width: 100%;
 }
 
-.lost-password-container {
+.renew-password-container {
     margin: 1.5rem 0;
 }
 
-.lost-password-error {
+.renew-password-error {
     color: mat-color($app-warn);
 }
