Improved all the redirecting in the auth modules
Logging in from anywhere or being redirected to it now persist where you came from and redirects there after login.
All parameters are now remembered from login if you go between sign up or renew password also.
Sign up and renew password now pass their info along to login.

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -34,7 +34,8 @@
         <br />
         <div fxLayout="column">
             <span>Don't have an account yet?
-                <button mat-stroked-button color="primary" routerLink="/sign-up">
+                <button mat-stroked-button color="primary" routerLink="/sign-up" routerLinkActive
+                    queryParamsHandling="preserve">
                     <span>Sign Up</span>
                 </button>
             </span>
@@ -42,7 +43,8 @@
         <br />
         <div fxLayout="column">
             <span>Having trouble logging in?
-                <button mat-stroked-button color="primary" routerLink="/reset-password">
+                <button mat-stroked-button color="primary" routerLink="/reset-password" routerLinkActive
+                    queryParamsHandling="preserve">
                     <span>Reset password</span>
                 </button>
             </span>
