--- a/src/app/login/lost-password/lost-password.component.html
+++ b/src/app/login/lost-password/lost-password.component.html
@@ -7,10 +7,13 @@
             <br />
             <div fxLayout="column">
                 <mat-form-field>
-                    <input type="text" matInput formControlName="email" autocomplete="username" placeholder="Email"
+                    <input type="email" matInput formControlName="email" autocomplete="username" placeholder="Email"
                         required />
                     <mat-error *ngIf="renewPasswordForm.get('email').hasError('required')">
                         <span>Email is required</span>
+                    </mat-error>
+                    <mat-error *ngIf="renewPasswordForm.get('email').hasError('email')">
+                        <span>Not a valid email</span>
                     </mat-error>
                 </mat-form-field>
                 <br />
