--- a/src/app/login/sign-up/sign-up.component.html
+++ b/src/app/login/sign-up/sign-up.component.html
@@ -50,7 +50,8 @@
         <br />
         <div fxLayout="column">
             <span>Already have an account?
-                <button mat-stroked-button color="primary" routerLink="/login">
+                <button mat-stroked-button color="primary" routerLink="/login" routerLinkActive
+                    queryParamsHandling="preserve">
                     <span>Login</span>
                 </button>
             </span>
